fixes h1 font size on mobile

--- a/css/base.css
+++ b/css/base.css
@@ -156,10 +156,6 @@ blockquote {
     max-width: 100%;
     padding: .5em;
   }
-  
-  h1 {
-    font-size: 1em;
-  }
 
   ul {
     margin-left: 1em;
